<resources>
    <string name="app_name">Github User</string>
    <string name="app_author">Created By : Andryan</string>
    <string name="search_user">Search User</string>
    <string name="search_scrollview">Search Scroll View</string>
    <string name="detail_label">User Detail</string>
    <string name="github_user_detail">Github User Detail</string>
    <string name="tab_layout_label">Tab Layout</string>
    <string name="img_splash">Splash Screen Image</string>
    <string name="tv_not_found">Sorry, Github User Not Found !!!</string>
    <string name="tv_no_followers">This user don\'t have any followers !!!</string>
    <string name="tv_no_following">This user don\'t following anyone !!!</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="fab_favorite">Favorite Action Button</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_favorite_github_user">My Favorite Github User</string>
    <string name="change_theme">Change Theme</string>
    <string name="text_retry">Try again</string>
    <string name="extra_username">EXTRA_USERNAME</string>
</resources>