<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_user_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingBottom="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_user_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/content_user_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_user_profile"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginVertical="16dp"
                            android:transitionName="userProfile"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_user_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:maxLines="1"
                            android:paddingHorizontal="16dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/img_user_profile" />

                        <TextView
                            android:id="@+id/tv_user_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:maxLines="1"
                            android:paddingHorizontal="16dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:textStyle="italic"
                            android:transitionName="username"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_user_fullname" />

                        <TextView
                            android:id="@+id/tv_user_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="8dp"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:paddingHorizontal="16dp"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                            android:textStyle="bold"
                            android:transitionName="url"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_user_username" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tv_user_url">

                            <TextView
                                android:id="@+id/tv_user_followers"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="16dp"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:paddingHorizontal="16dp"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_user_following"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="16dp"
                                android:layout_weight="1"
                                android:maxLines="1"
                                android:paddingHorizontal="16dp"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:subtitleTextAppearance="@style/TextAppearance.Material3.LabelMedium"
                app:subtitleTextColor="@color/white"
                app:title="@string/github_user_detail"
                app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/Widget.Material3.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:contentDescription="@string/tab_layout_label"
            android:overScrollMode="never"
            android:visibility="gone"
            app:tabGravity="fill"
            app:tabTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/detail_label"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_favorite"
        android:src="@drawable/ic_favorite_outline"
        android:visibility="gone"
        app:fabSize="normal" />

    <ProgressBar
        android:id="@+id/load_user_detail"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>